修正  - 前台新模板套用
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/account/templates/queryord.htm
+++ b/account/templates/queryord.htm
@@ -1,4 +1,4 @@
-{% extends "new.base.htm" %}
+{% extends "shop.base.htm" %}
 
 {% block middle %}
                 <div id="right">
@@ -27,8 +27,4 @@
                         </div>
                     </div>
                 </div>
-{% endblock %}
-
-{% block js %}
-        <script type="text/javascript" src="{{ STATIC_URL }}new/js/sides.js"></script>
 {% endblock %}
