--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -1,137 +1,94 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>{% block title %}{% if request.title %}{{ request.title }} {% endif %}{% endblock %}31客 - 源自欧洲经典口味！</title>
-    <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
-    <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
-    {% block meta %}{% endblock %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}shop/css/base.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}shop/css/style.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.zebra_datepicker.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.jgd.dropdown.min.css" />
-    <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+        <title>{% block title %}{% if request.title %}{{ request.title }} {% endif %}{% endblock %} - new31管理中心</title>
+        <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
+        <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
+        <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
+        <link href="{{ STATIC_URL }}shop/css/css.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.zebra_datepicker.css" />
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.debug.css" />
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.jgd.dropdown.min.css" />
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.zebra_datepicker.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.dialog.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.debug.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jgd.dropdown.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}shop/js/comm.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}shop/js/base.configuration.js"></script>
+        <script type="text/javascript">
+            var csrf = "{% csrf_token %}";
+            {% block javascript %}{% endblock %}
+        </script>
+        {% block js %}{% endblock %}
     <!--[if IE 6]>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/DD_belatedPNG.js"></script>
-    <script type="text/javascript">
-        DD_belatedPNG.fix('img, .logo');
-    </script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/DD_belatedPNG.js"></script>
+        <script type="text/javascript">
+            DD_belatedPNG.fix('img, .logo');
+        </script>
     <![endif]-->
-</head>
-<body>
-    <div id="header">
-        <div class="toolBar">
-            <a href="{% url 'shop:shop' %}" title="31客" class="logo" ></a>
-            <ul class="fl">
-                <li><a href="{% url 'article:about' %}">关于31客</a></li>
-                <li><a href="{% url 'article:guide' %}">订购指南</a></li>
-                <li><a href="{% url 'article:ex' %}">K金换购</a></li>
-            </ul>
-            <ul class="fr">
-                <li>
-                    <form action="/search/" method="get">
-                        <input id="txtTopSearch" name="key" type="text" accesskey="s" class="topSearch" />
-                        <button type="submit" class="btn_search" title="搜索">搜索</button>
-                    </form>
-                </li>
-                <li class="messageBox">
-                    <a id="lnkTopMessage" href="{% url 'account:myOrd' %}" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">{{ user.allMsg|default:0 }}</span></a>
-                    <div id="pnlTopMessage" class="messagePop" style="display:none;">
-                        <h3>新消息</h3>
-                        <ul>
-                            <li><a href="{% url 'account:myOrd' %}">新订单（ {{ user.newOrd|default:0 }} ）</a></li>
-                            <li><a href="/account/messages/">新留言（ {{ user.newMsg|default:0 }} ）</a></li>
-                        </ul>
-                        <a class="confirm boxClose" href="javascript:void(0)">关闭</a>
-                    </div>
-                </li>
-                <li><a href="{% url 'cart:cart' %}">购物车</a></li>
+    </head> 
+    <body>
+        <div id="tb">
+            <dl id="bar">
+                <dt>Tel：4000-5927-31</dt>
+                <dd>
+                    <a href="{% url 'account:queryOrd' %}">订单查询</a>
+                    <a href="{% url 'cart:cart' %}">购物车</a>
 {% if user.is_authenticated %}
-                <li class="messageBox">
-                    <a id="lnkTopSetting" class="pic">设置<b></b></a>
-                    <div id="pnlTopProfile" class="messagePop" style="display: none;">
-                        <h3>{{ user}}</h3>
-                        <ul>
-                            <li class="email"><em>{{ user.email}}</em></li>
-                            <li><a href="{% url 'account:myOrd' %}">我的订单</a></li>
-                            <li><a href="{% url 'account:settings' %}">个人设置</a></li>
-                            <li><a href="{% url 'account:changepwd' %}">修改密码</a></li>
-{% if user.is_staff %}
-                            <li><a href="{% url 'office:office' %}" target="_blank">管理中心</a></li>
-{% endif %}
-{% if user.is_superuser %}
-                            <li><a href="{% url 'admin:index' %}" target="_blank">站点管理</a></li>
-{% endif %}
-                        </ul>
-                        <a class="confirm" href="{% url 'account:logout' %}">退出登录</a>
-                   </div>
-                </li>
+                    <a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a>
 {% else %}
-                <li class="messageBox">
-                    <a href="{% url 'account:login' %}" id="lnkTopLogin" class="login">登录</a>
-                    <div id="loginMessage" class="messagePop" style="display: none;">
-                        <div class="topLoginBox">
-                            <form action="{% url 'account:login' %}" method="post">{% csrf_token %}
-                                <ul>
-                                    <li><label for="UserName">帐号：</label><input name="username" type="text" placeholder="用户名/邮箱" id="UserName" /></li>
-                                    <li><label for="Password">密码：</label><input name="password" type="password" id="Password" /></li>
-                                    <li align="right"><input class="btnGr bBtn" type="submit" value="登录" /><input type="hidden" name="next" value="/" /></li>
-                                </ul>
-                            </form>
-                        </div>
-                   </div>
-                </li>
+                    <a href="{% url 'account:login' %}">登录</a>
 {% endif %}
-            </ul>
+                </dd>
+                <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->  
+            </dl>
         </div>
-    </div>
-{% block scrollBox %}{% endblock %}
-{% block subMenu %}
-    <div id="scrollTop">
-        <div class="bar">
-            <ul class="intro">
-                <li><p><span class="txt">喜欢就拨打电话吧，4000 - 5927 - 31。</span><br><span class="txtFrom">—— 31客</span></p></li>
-                <li><p><span class="txt">吃个31客的蛋糕，喝喝下午茶，最幸福了。</span><br><span class="txtFrom">—— 晴天浅唱（微博网友）</span></p></li>
-                <li><p><span class="txt">第一次吃到杏仁咖啡，叹为观止。</span><br><span class="txtFrom">—— 韦夏（当代生活报记者）</span></p></li>
-                <li><p><span class="txt">美食，同大家一齐分享。</span><br><span class="txtFrom">—— 31客</span></p></li>
-            </ul>
-            <ul class="menu">
-                <li><a  href="{% url 'tag:tagShow' 'cake' %}">蛋糕</a></li>
-                <li><a href="{% url 'tag:tagShow' 'cookie' %}">曲奇</a><span></span></li>
-                <li><a href="{% url 'tag:tagShow' 'chocolate' %}">巧克力</a></li>
-                <li><a href="{% url 'tag:tagShow' 'pie' %}">水果派</a></li>
-            </ul>
-        </div>
-    </div>
-{% endblock %}
-    <div id="content" class="clearfix">
+        <div id="main">
+            <div id="top">
+                <dl class="mti" id="logo">
+                    <dt><a href="{% url 'shop:shop' %}" title="31客">31KECAKE</a></dt>
+                    <dd><!-- <img src="{{ static }}new31/images/13741335652678.jpg" width="150" height="86"/> --></dd>
+                </dl>
+                <ul class="menu">
+                    <li>
+                        <a href="{% url 'shop:shop' %}#logo">首页</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'shop:shop' %}#cake">蛋糕</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'shop:shop' %}#cookie">曲奇</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'shop:shop' %}#chocolate">巧克力</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'shop:shop' %}#pie">派</a>
+                    </li>
+                </ul>
+            </div>
+            <div id="middle">
 {% if messages %}
-    <ul class="messagelist">
+        <ul class="messagelist">
 {% for i in messages %}
-        <li class="{{ i.tags }}">{{ i|striptags }}</li>
+            <li class="{{ i.tags }} bline">{{ i|striptags }}</li>
 {% endfor %}
-    </ul>
+        </ul>
 {% endif %}
-{% block content %}{% endblock %}
-    </div>
-    <div id="footer">
-        <div class="other">
-            <ul>
-                 <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=672592854&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:672592854:4" height="16" border="0" alt="QQ" />672592854</a></li>
-                <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2310857615&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2310857615:4" height="16" border="0" alt="QQ" />2310857615</a></li>
-                <li><a href="http://wpa.qq.com/msgrd?V=3&amp;uin=2605043362&amp;site=31客&amp;menu=yes" target="_blank"><img src="http://wpa.qq.com/pa?p=1:2605043362:4" height="16" border="0" alt="QQ" />2605043362</a></li>
-                <li><a href="http://sae.sina.com.cn" target="_blank"><img src="http://static.sae.sina.com.cn/image/poweredby/117X12px.gif" title="Powered by Sina App Engine"></a></li>
-                <li><a href="/home/about/">订购专线: 4000-5927-31 | 客服电话：0771-5676920 0771-5676753</a></li>
-                <li><a target="_blank" href="http://www.miibeian.gov.cn/">桂ICP备12002164号</a></li>
-            </ul>
+{% block middle %}{% endblock %}
+                <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
+            </div>
+            <div id="ft">
+                <dl id="foot">
+                    <dt><a href="{% url 'article:about' %}">关于31客</a></dt>
+                    <dd>Tel：0771-5676920 0771-5676753</dd>
+                    <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
+                </dl>
+            </div>
+            <!--[if !IE]><!--><div class="clear"></div><!--<![endif]-->
         </div>
-        <div class="footerLayer"></div>
-    </div>
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.zebra_datepicker.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.dialog.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jgd.dropdown.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}shop/js/base.configuration.js"></script>
-{% block js %}{% endblock %}
-</body>
+    </body>
 </html>
