--- a/account/templates/changepwd.htm
+++ b/account/templates/changepwd.htm
@@ -1,28 +1,33 @@
 {% extends "shop.base.htm" %}
 
-{% block subMenu %}
-    <div class="subMenu">
-        <h4>设置</h4>
-        <ul>
-            <li><a href="{% url 'account:settings' %}">基本资料</a></li>
-            <li><a href="{% url 'account:changepwd' %}" class="select">密码</a></li>
-        </ul>
-    </div>
-{% endblock %}
-
-{% block content %}
-        <div class="pWhite">
+{% block middle %}  
+        <div id="left">
+            <ul id="lm">
+                <li><a href="{% url 'account:myOrd' %}">我的订单</a></li>
+                <li><a href="{% url 'account:settings' %}">个人信息</a></li>
+                <li><a href="{% url 'account:changepwd' %}" class="on">修改密码</a></li>
+            </ul>
+        </div>
+        <div id="right">
             <form action="{% url 'account:cPwd' %}" method="post">
+                {% csrf_token %}
+                <table cellpadding="0" cellspacing="0" width="335" class="tdptd5">
+                    <tr>
+                        <td colspan="2">修改密码</td>
+                    </tr>
 {% for i in frm %}
-                <div class="formBar">
-                    <label>{{ i.label }}</label>
-                    {{ i }}
-                </div>
+                    <tr>
+                        <td align="right">{{ i.label }}：</td>
+                        <td>{{ i }}</td>
+                    </tr>
 {% endfor %}
-                <div class="btnBox">
-                    {% csrf_token %}
-                    <input class="btnG bBtn" type="submit" value="修改密码" />
-                </div>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td>
+                            <input type="submit" value="修改" class="btn btnbr"/>
+                        </td>
+                    </tr>
+                </table>
             </form>
         </div>
 {% endblock %}
