--- a/account/templates/myord.htm
+++ b/account/templates/myord.htm
@@ -1,8 +1,15 @@
 {% extends "shop.base.htm" %}
 
 
-{% block content %}
-        <div class="pWhite pd10">
+{% block middle %}
+        <div id="left">
+            <ul id="lm">
+                <li><a href="{% url 'account:myOrd' %}" class="on">我的订单</a></li>
+                <li><a href="{% url 'account:settings' %}">个人信息</a></li>
+                <li><a href="{% url 'account:changepwd' %}">修改密码</a></li>
+            </ul>
+        </div>
+        <div id="right">
             <table width="100%">
                 <tr align="center">
                     <th>订单号</th>
