--- a/account/templates/settings.htm
+++ b/account/templates/settings.htm
@@ -1,34 +1,39 @@
 {% extends "shop.base.htm" %}
 
-{% block subMenu %}
-    <div class="subMenu">
-        <h4>设置</h4>
-        <ul>
-            <li><a href="{% url 'account:settings' %}" class="select">基本资料</a></li>
-            <li><a href="{% url 'account:changepwd' %}">密码</a></li>
-        </ul>
-    </div>
-{% endblock %}
-
-{% block content %}
-        <div class="pWhite">
+{% block middle %}
+        <div id="left">
+            <ul id="lm">
+                <li><a href="{% url 'account:myOrd' %}">我的订单</a></li>
+                <li><a href="{% url 'account:settings' %}" class="on">个人信息</a></li>
+                <li><a href="{% url 'account:changepwd' %}">修改密码</a></li>
+            </ul>
+        </div>
+        <div class="right">
             <form action="{% url 'account:saveSet' %}" method="post">
-                <div class="box">
-                    <label>{{ frm.sex.label }}：</label>
-                    <p>{{ frm.sex }}</p>
-                </div>
-                <div class="box">
-                    <label>{{ frm.mon.label }}：</label>
-                    <p>{{ frm.mon }}</p>
-                </div>
-                <div class="box">
-                    <label>{{ frm.day.label }}：</label>
-                    <p>{{ frm.day }}</p>
-                </div>
-                <div class="btnBox">
-    {% csrf_token %}
-                    <input type="submit" class="btnG bBtn" value="保存" />
-                </div>
+                {% csrf_token %}
+                <table cellpadding="0" cellspacing="0" width="335" class="tdptd5">
+                    <tr>
+                        <td colspan="2">个人信息</td>
+                    </tr>
+                    <tr>
+                        <td align="right">{{ frm.sex.label }}：</td>
+                        <td>{{ frm.sex }}</td>
+                    </tr>
+                    <tr>
+                        <td align="right">{{ frm.mon.label }}：</td>
+                        <td>{{ frm.mon }}</td>
+                    </tr>
+                    <tr>
+                        <td align="right">{{ frm.day.label }}：</td>
+                        <td>{{ frm.day }}</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td>
+                            <input type="submit" value="保存" class="btn btnbr"/>
+                        </td>
+                    </tr>
+                </table>
             </form>
         </div>
 {% endblock %}
