--- a/account/templates/vieword.htm
+++ b/account/templates/vieword.htm
@@ -1,10 +1,16 @@
 {% extends "shop.base.htm" %}
 
-
-{% block content %}
-        <div class="pWhite">
-            <h2>订单状态</h2>
-            <table width="100%" class="mBottom10">
+{% block middle %}
+        <div id="left">
+            <ul id="lm">
+                <li><a href="{% url 'account:myOrd' %}" class="on">我的订单</a></li>
+                <li><a href="{% url 'account:settings' %}">个人信息</a></li>
+                <li><a href="{% url 'account:changepwd' %}">修改密码</a></li>
+            </ul>
+        </div>
+        <div id="right">
+            <h3 class="mt5">订单状态</h3>
+            <table width="100%" class="mb10 ml5">
                 <tr>
                     <td width="100px">订单号：</td>
                     <td>{{ o.sn }}</td>
@@ -22,8 +28,8 @@
                     <td><strong>{{ o.logcs.cod.get_cod_display }}</strong> | <font color="red">{{ o.logcs.get_status_display }}</font></td>
                 </tr>
             </table>
-            <h3>商品列表</h3>
-            <table width="100%" class="mBottom10">
+            <h3 class="mb10">商品列表</h3>
+            <table width="100%" class="mb10 ml5">
                 <tr>
                     <th>商品名称</th>
                     <th>规格</th>
@@ -34,7 +40,7 @@
                     <th>小计</th>
                 </tr>
 {% for i in o.pro_set.all %}
-                <tr class="bLine" align="center">
+                <tr class="bline" align="center">
                     <td>{{ i.name }}</td>
                     <td>{{ i.spec }}</td>
                     <td>{{ i.fee|floatformat:2 }}</td>
@@ -44,13 +50,13 @@
                     <td>{{ i.total|floatformat:2 }}</td>
                 </tr>
 {% endfor %}
-                <tr>
+                <tr class="bline">
                     <td colspan="6" align="right"><span >总计: {{ o.total|floatformat:2 }}</span></td>
                     <td>&nbsp;</td>
                 </tr>
             </table>
             <h3>收货人信息</h3>
-            <table width="100%" class="mBottom10">
+            <table width="100%" class="mb10 ml5">
                 <tr>
                     <td width="100px">收货人姓名：</td>
                     <td>{{ o.logcs.consignee }}</td>
@@ -72,6 +78,6 @@
                     <td>{{ o.logcs.note }}</td>
                 </tr>
             </table>
-            <center><a class="btnB bBtn" href="{% url 'account:myOrd' %}">返回</a></center>
+            <center><a href="{% url 'account:myOrd' %}" class="btn btnbr">返回</a></center>
         </div>
 {% endblock %}
