--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -1,8 +1,8 @@
 {% extends "shop.base.htm" %} 
 
 {% block middle %}
-<form name="toCart" method="post" action="/cart/">
-    <table width="100%" class="mtb25">
+<form name="toCart" method="post" action="{% url 'cart:cart' %}">
+    <table width="100%" class="mtb25 tdptd5">
         <tr>
             <th>商品名称</th>
             <th width="20%">商品规格</th>
@@ -42,28 +42,16 @@
             </td>
         </tr>
     </table>
-    <table width="100%" class="mtb25">
+    <table width="100%" class="mtb25 tdptd5">
         <tr>
-            <td>
-                是否额外购买生日套装（生日牌/冷烟花/蜡烛）？
-            </td>
-            <td>
-                单价：3元/份
-            </td>
-            <td align="right">
-                <a href="{% url 'cart:buy' 115 %}" class="btn btnbr">是的，我需要增加生日套装</a>
-            </td>
+            <td>是否额外购买生日套装（生日牌/冷烟花/蜡烛）？</td>
+            <td>单价：3元/份</td>
+            <td align="right"><a href="{% url 'cart:buy' 115 %}" class="btn btnbr">是的，我需要增加生日套装</a></td>
         </tr>
         <tr>
-            <td>
-                除按蛋糕规格免费赠送的餐具数量外（详见下面说明），是否额外需要餐具？
-            </td>
-            <td>
-                单价：1元/份
-            </td>
-            <td align="right">
-                <a href="{% url 'cart:buy' 116 %}" class="btn btnbr">是的，我需要增加餐具</a>
-            </td>
+            <td>除按蛋糕规格免费赠送的餐具数量外（详见下面说明），是否额外需要餐具？</td>
+            <td>单价：1元/份</td>
+            <td align="right"><a href="{% url 'cart:buy' 116 %}" class="btn btnbr">是的，我需要增加餐具</a></td>
         </tr>
     </table>
 </form>
