--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.debug.css" />
         <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.jgd.dropdown.min.css" />
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.scrollLoading-min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.zebra_datepicker.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.dialog.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.debug.js"></script>
@@ -26,7 +27,7 @@
     <!--[if IE 6]>
         <script type="text/javascript" src="{{ STATIC_URL }}js/DD_belatedPNG.js"></script>
         <script type="text/javascript">
-            DD_belatedPNG.fix('img, .logo');
+           DD_belatedPNG.fix('img, .jgd-dropdown dt'); 
         </script>
     <![endif]-->
     </head> 
@@ -35,10 +36,11 @@
             <dl id="bar">
                 <dt>Tel：4000-5927-31</dt>
                 <dd>
-                    <a href="{% url 'account:queryOrd' %}">订单查询</a>
+                    <a href="{% url 'order:queryOrd' %}">订单查询</a>
                     <a href="{% url 'cart:cart' %}">购物车</a>
 {% if user.is_authenticated %}
                     <a href="{% url 'account:myOrd' %}">我的订单（ {{ user.newOrd|default:0 }} ）</a>
+                    <a href="{% url 'account:logout' %}">登出</a>
 {% else %}
                     <a href="{% url 'account:login' %}">登录</a>
 {% endif %}
