--- a/order/templates/queryord.htm
+++ b/order/templates/queryord.htm
@@ -6,7 +6,7 @@
                         <div id="m_i">
                             <span id="result"></span>
                             <form action="" method="post">
-                                <table width="670" cellpadding="0" cellspacing="0">
+                                <table width="670" cellpadding="0" cellspacing="0" class="tdptd5">
                                     <tr>
                                         <td colspan="2">输入订单号查询订单状态</td>
                                     </tr>
