--- a/shop/static/shop/css/css.css
+++ b/shop/static/shop/css/css.css
@@ -18,6 +18,11 @@ a.on {
     border-bottom: thick solid #5B2900;
 }
 
+h3{
+    line-height: 2;
+    padding-left:5px;
+}
+
 img {
     border: 0;
     float: left;
@@ -49,9 +54,9 @@ table {
 }
 
 table tr td {
-    padding: 5px;
-    height: 26px;
-    line-height: 26px;
+    height:24px;
+    padding: 0 5px; 
+    line-height: 2;
 }
 
 p {
@@ -67,12 +72,12 @@ input[type=text],input[type=password],textarea {
     background: #FFF;
 }
 
-input {
-    *height: 16px;
-    *padding: 3px;
-    *border: 1px solid #cc9866;
-    *border-radius: 2px;
-    *background: #FFF;
+*input {
+    height: 16px;
+    padding: 3px;
+    border: 1px solid #cc9866;
+    border-radius: 2px;
+    background: #FFF;
 }
 
 textarea {
@@ -177,12 +182,28 @@ input:focus,textarea:focus {
     margin: 25px 0;
 }
 
+.ml5 {
+    margin-left: 5px;
+}
+
 .ml40 {
     margin-left: 40px;
 }
 
 .mb10 {
     margin-bottom: 10px;
+}
+
+.mt5 {
+    margin-top: 5px;
+}
+
+.mt10 {
+    margin-top: 10px;
+}
+
+.ptb5 {
+    padding: 5px 0;
 }
 
 .ptb25 {
@@ -195,6 +216,11 @@ input:focus,textarea:focus {
 
 .lh26 {
     line-height: 26px;
+}
+
+.tdptd5 tr td{
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 *html {
@@ -328,7 +354,6 @@ input:focus,textarea:focus {
     display: block;
     padding: 4px 5px 4px 25px;
     margin: 0 0 3px 0;
-  /*background: #ffc url(/static/images/icon_success.gif) 5px .3em no-repeat;*/
     background: url(/static/images/icon_success.gif) 5px .3em no-repeat;
 }
 
@@ -421,6 +446,10 @@ input:focus,textarea:focus {
 #main #middle #left {
     width: 20%;
     float: left;
+}
+
+*#main #middle #left {
+    width: 18%;
 }
 
 #main #middle #left #lm {
