修正  - 支付方式插件方案确认  - 修改produce模块中总价以及积分方法
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/account/templates/settings.htm
+++ b/account/templates/settings.htm
@@ -16,6 +16,10 @@
                         <td colspan="2">个人信息</td>
                     </tr>
                     <tr>
+                        <td align="right">积分：</td>
+                        <td>{{ request.user.pts.pt }}</td>
+                    </tr>                    
+                    <tr>
                         <td align="right">{{ frm.sex.label }}：</td>
                         <td>{{ frm.sex }}</td>
                     </tr>
