--- a/account/templates/myord.htm
+++ b/account/templates/myord.htm
@@ -24,7 +24,7 @@
                     <td><a href="{% url 'account:uViewOrd' i.sn %}">{{ i.sn }}</a></td>
                     <td>{{ i.get_typ_display }}</td>
                     <td>{{ i.ordlog_set.all.0.time|date:'Y-m-d H:i:s' }}</td>
-                    <td>{{ i.total|floatformat:2 }}</td>
+                    <td>{{ i.pro_set.all.total|floatformat:2 }}</td>
                     <td>{{ i.get_status_display }} | {{ i.logcs.get_status_display }} | {{ i.fnc.get_status_display }}</td>
                     <td><a href="{% url 'account:uViewOrd' i.sn %}">查看详情</a></td>
                 </tr>
