--- a/account/templates/vieword.htm
+++ b/account/templates/vieword.htm
@@ -51,7 +51,7 @@
                 </tr>
 {% endfor %}
                 <tr class="bline">
-                    <td colspan="6" align="right"><span >总计: {{ o.total|floatformat:2 }}</span></td>
+                    <td colspan="6" align="right"><span >总计: {{ o.pro_set.all.total|floatformat:2 }}</span></td>
                     <td>&nbsp;</td>
                 </tr>
             </table>
