--- a/cart/templates/consignee.htm
+++ b/cart/templates/consignee.htm
@@ -4,13 +4,13 @@
     <h3>收货人信息</h3>
     <p>（请填写详细收货地址及准确的最佳送货时间，以便更快捷将您订购的蛋糕送达！）</p>
     <form action="{% url 'cart:checkout' %}" method="POST" name="checkout" id="checkout">
-        <table width="100%" id="fnc">                        
+        <table width="100%" id="fnc" class="tdptd5">                        
             <tr>
                 <td align="right" width="100px">{{ fnc.pay.label }}：</td>
                 <td>{{ fnc.pay }}</td>
             </tr>
         </table>
-        <table width="100%" id="logcs">
+        <table width="100%" id="logcs" class="tdptd5">
             <tr>
                 <td align="right" width="100px">{{ cnsgn.dlvr.label }}：</td>
                 <td>{{ cnsgn.dlvr }}</td>
