--- a/order/templates/orderview.htm
+++ b/order/templates/orderview.htm
@@ -43,7 +43,7 @@
                 </tr>
 {% endfor %}
                 <tr>
-                    <td colspan="6" align="right"><span >总计: {{ o.total|floatformat:2 }}</span></td>
+                    <td colspan="6" align="right"><span >总计: {{ o.pro_set.all.total|floatformat:2 }}</span></td>
                     <td>&nbsp;</td>
                 </tr>
             </table>
