--- a/print/templates/print.htm
+++ b/print/templates/print.htm
@@ -50,7 +50,7 @@
                 </tr>
 {% endfor %}
                 <tr>
-                    <td colspan="6" align="right"><span >总计: {{ o.total|floatformat:2 }}</span>&nbsp;&nbsp;[ {{ o.get_typ_display }} ]</td>
+                    <td colspan="6" align="right"><span >总计: {{ o.pro_set.all.total|floatformat:2 }}</span>&nbsp;&nbsp;[ {{ o.get_typ_display }} ]</td>
                     <td align="center">{{ o.fnc.cod.get_cod_display }} | {{ o.fnc.get_status_display }}</td>
                 </tr>
             </table>
