修正  - 前端首页幻灯片插件重新编写  - 支付方式插件逐渐完善
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -63,7 +63,7 @@
                 <td>&nbsp;</td>
             </tr>
         </table>
-        <h3>收货人信息&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'cart:cnsgn' %}" class="sbtn btnbr">修改</a></h3>
+        <h3>收货人信息&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'cart:cnsgn' %}" class="sbtn btnbr">修改</a></h3>
         <table width="100%" class="mb10">
             <tr>
                 <td width="100px">收货人姓名：</td>
