--- a/shop/static/shop/css/css.css
+++ b/shop/static/shop/css/css.css
@@ -366,6 +366,8 @@ input:focus,textarea:focus {
 }
 
 #main #middle #bner {
+    width: 100%;
+    height:530px;
     padding-bottom: 20px;
     float: left;
 }
@@ -704,92 +706,21 @@ input:focus,textarea:focus {
     padding: 10px 0;
 }
 
-#imgPlay {
-    overflow: hidden;
-    width: 886px;
-    zoom: 1;
-    position: relative;
-    height: 531px;
-    float: left;
-    overflow: hidden;
-}
 
-#imgPlay .imgs img {
-    width: 886px;
-    height: 531px;
-}
-
-#imgPlay .imgs li {
-    width: 886px;
-    float: left;
-    position: relative
-}
-
-#imgPlay .imgs {
-    width: 5260px
-}
-
-#imgPlay .prev {
-    background: url(/static/shop/images/imgPlayer.png) no-repeat;
-    left: 0;
-    width: 46px;
-    cursor: pointer;
-    text-indent: -9999px;
-    position: absolute;
-    top: 110px;
-    height: 81px
-}
-
-#imgPlay .next {
-    background: url(/static/shop/images/imgPlayer.png) no-repeat;
-    left: 0;
-    width: 46px;
-    cursor: pointer;
-    text-indent: -9999px;
-    position: absolute;
-    top: 110px;
-    height: 81px
-}
-
-#imgPlay .next {
-    background-position: right 0px;
-    right: 1px;
-    left: auto
-}
-
-#imgPlay .num {
-    display: inline;
-    left: 400px;
-    position: absolute;
-    top: 275px;
-    height: 19px
-}
-
-#imgPlay .num span {
+.num span {
     display: inline-block;
     background: url(/static/shop/images/imgPlayer.png) no-repeat -19px -83px;
     margin: 0px 2px;
     overflow: hidden;
     width: 14px;
     cursor: pointer;
-    line-height: 0;
     height: 13px
 }
 
-#imgPlay .num span.on {
+.num span:hover {
     background-position: 1px -83px
 }
 
-#imgPlay .num .mc {
-    float: left;
-    width: 13px;
-    height: 16px;
-}
-
-#imgPlay #numInner {
-    background: none transparent scroll repeat 0% 0%;
-    padding-top: 3px;
-    position: absolute;
-    top: 510px;
-    text-align: center
+.num span.on {
+    background-position: 1px -83px
 }
