修正  - 前台首页幻灯片插件重写
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -21,7 +21,9 @@
         <script type="text/javascript" src="{{ STATIC_URL }}shop/js/base.configuration.js"></script>
         <script type="text/javascript">
             var csrf = "{% csrf_token %}";
-            {% block javascript %}{% endblock %}
+            $(document).ready(function() {
+                {% block javascript %}{% endblock %}
+            });
         </script>
         {% block js %}{% endblock %}
     <!--[if IE 6]>
