--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -2,11 +2,11 @@
 
 {% block middle %}
                 <div id="bner">
-                    <ul style="display: none;">
-                        <li><a href="/" target="_blank"><img data-src="{{ STATIC_URL }}shop/images/13679842939718.jpg"></a></li>
-                        <li><a href="/" target="_blank"><img data-src="{{ STATIC_URL }}shop/images/13743081412997.jpg"></a></li>
-                        <li><a href="/" target="_blank"><img data-src="{{ STATIC_URL }}shop/images/13804380515243.jpg"></a></li>
-                        <li><a href="/" target="_blank"><img data-src="{{ STATIC_URL }}shop/images/13743081906304.jpg"></a></li>
+                    <ul>
+                        <li><a href="/" target="_blank"><img src="{{ STATIC_URL }}shop/images/13679842939718.jpg"></a></li>
+                        <li><a href="/" target="_blank"><img src="{{ STATIC_URL }}shop/images/13743081412997.jpg"></a></li>
+                        <li><a href="/" target="_blank"><img src="{{ STATIC_URL }}shop/images/13804380515243.jpg"></a></li>
+                        <li><a href="/" target="_blank"><img src="{{ STATIC_URL }}shop/images/13743081906304.jpg"></a></li>
                     </ul>
                 </div>
                 <dl class="mti" id="cake">
@@ -143,7 +143,8 @@
 
 {% block js %}
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.sides.js"></script>
-    <script type="text/javascript">
-        $('#bner').sides();
-    </script>
+{% endblock %}
+
+{% block javascript %}
+            $('#bner ul').sides();
 {% endblock %}
