--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -3,10 +3,10 @@
 {% block middle %}
                 <div id="bner">
                     <ul>
-                        <li><a href="/" target="_blank"><img src="{{ STATIC_URL }}shop/images/13679842939718.jpg"></a></li>
-                        <li><a href="/" target="_blank"><img src="{{ STATIC_URL }}shop/images/13743081412997.jpg"></a></li>
-                        <li><a href="/" target="_blank"><img src="{{ STATIC_URL }}shop/images/13804380515243.jpg"></a></li>
-                        <li><a href="/" target="_blank"><img src="{{ STATIC_URL }}shop/images/13743081906304.jpg"></a></li>
+                        <li><a href="/" target="_blank"><img data-src="{{ STATIC_URL }}shop/images/13679842939718.jpg"></a></li>
+                        <li><a href="/" target="_blank"><img data-src="{{ STATIC_URL }}shop/images/13743081412997.jpg"></a></li>
+                        <li><a href="/" target="_blank"><img data-src="{{ STATIC_URL }}shop/images/13804380515243.jpg"></a></li>
+                        <li><a href="/" target="_blank"><img data-src="{{ STATIC_URL }}shop/images/13743081906304.jpg"></a></li>
                     </ul>
                 </div>
                 <dl class="mti" id="cake">
